kubernetes/spack/staging-spack-io/cdash/web/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdash-staging
  namespace: spack
  labels:
    app: cdash-staging
    svc: web
spec:
  selector:
    matchLabels:
      app: cdash-staging
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: cdash-staging
        svc: web
    spec:
      restartPolicy: Always
      containers:
      - name: cdash-staging
        command: ["/bin/bash", "-c"]
        args:
          - >
            eval 'CDASH_CONFIG="$(CDASH_CONFIG_TEMPLATE)"' ;
            export CDASH_CONFIG ;
            exec /bin/bash /docker-entrypoint.sh
        image: "kitware/cdash:spack_deploy"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
      nodeSelector:
        "beta.kubernetes.io/instance-type": "t2.medium"
